<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/listheader_border">
    <TextView android:id="@+id/column_name_header"
        android:layout_width="0dp"
    	android:layout_weight="1"    
    	android:padding="5dp" 
    	android:textSize="12sp" 
    	android:textStyle="bold"        	   
    	android:layout_height="wrap_content" 
        android:text="@string/column_product_name_header"    	
        />
    <TextView android:id="@+id/column_description_header"
        android:layout_width="0dp"
    	android:layout_weight="2"    
    	android:padding="5dp" 
    	android:textSize="12sp" 
    	android:textStyle="bold"        	   
    	android:layout_height="wrap_content" 
        android:text="@string/column_product_description_header"    	
        />    
    <TextView android:id="@+id/column_price_header"
        android:layout_width="0dp"
    	android:layout_weight="1" 
    	android:padding="5dp"   
    	android:textSize="12sp" 
    	android:textStyle="bold"         	 
    	android:layout_height="wrap_content" 
        android:text="@string/column_product_price_header"    	
        />  
    <TextView android:id="@+id/column_mrp_price_header"
        android:layout_width="0dp"
    	android:layout_weight="1" 
    	android:layout_marginRight="20dp"    	   
    	android:gravity="right"     	
    	android:padding="5dp"   
    	android:textSize="12sp" 
    	android:textStyle="bold"         	 
    	android:layout_height="wrap_content" 
        android:text="@string/column_product_mrp_price_header"    	
        />              
</LinearLayout>