<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/listheader_border">
    <TextView android:id="@+id/column_payment_id_header"
        android:layout_width="0dp"
        android:layout_weight="1.2"  
    	android:padding="2dp"  
    	android:textSize="11sp"
   	 	android:textStyle="bold"     	              
        android:layout_height="wrap_content"
        android:text="@string/column_payment_id_header"
        />
    <TextView android:id="@+id/column_payment_date_header"
        android:layout_width="0dp"
    	android:layout_weight="1.8"    
    	android:padding="2dp" 
    	android:textSize="11sp"
   	 	android:textStyle="bold"       	   
    	android:layout_height="wrap_content" 
        android:text="@string/column_payment_date_header"    	
        />
    <TextView android:id="@+id/column_payment_method_header"
        android:layout_width="0dp"
    	android:layout_weight="1.2"    
    	android:padding="2dp"  
    	android:textSize="11sp"
   	 	android:textStyle="bold"       	  
    	android:layout_height="wrap_content" 
        android:text="@string/column_payment_method_header"    	
        /> 
       
    <TextView android:id="@+id/column_payment_amount_header"
        android:layout_width="0dp"
    	android:layout_weight="1.8"    
    	android:gravity="right"     	
    	android:padding="2dp"  
    	android:textSize="11sp"
   	 	android:textStyle="bold"       	 
    	android:layout_marginRight="10dp"    	 
    	android:layout_height="wrap_content" 
        android:text="@string/column_payment_amount_header"    	
        />                    
</LinearLayout>