<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/listheader_border">
    <TextView android:id="@+id/column_indentitem_product_name_header"
        android:layout_width="0dp"
        android:layout_weight="1"  
    	android:padding="5dp"  
    	android:textSize="15sp" 
    	android:textStyle="bold"       	              
        android:layout_height="wrap_content"
        android:text="@string/column_product_name_header"
        />    
    <TextView android:id="@+id/column_indentitem_qty_header"
        android:layout_width="0dp"
    	android:layout_weight="1" 
    	android:gravity="right"     	    	   
    	android:padding="5dp"    
    	android:textSize="15sp" 
    	android:textStyle="bold"       	
    	android:layout_height="wrap_content" 
        android:text="@string/column_orderitem_qty_header"    	
        /> 
    <TextView android:id="@+id/column_indentitem_amount_header"
        android:layout_width="0dp"
    	android:layout_weight="1.2"    
    	android:gravity="right"     	
    	android:padding="5dp" 
    	android:textSize="15sp" 
    	android:textStyle="bold"       	  
    	android:layout_marginRight="20dp"    	 
    	android:layout_height="wrap_content" 
        android:text="@string/column_orderitem_amount_header"    	
        />           
</LinearLayout>